# dinghy

./: .gitignore  .travis.apple-third-tier.sh  .travis.sh  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  musl_build.sh  post-release.sh  pre-release.sh  release.sh  tmp.json
.github/workflows/: binaries.yml  release.yml  test.yml
cargo-dinghy/: Cargo.toml
cargo-dinghy/src/: cli.rs  main.rs
dinghy-build/: Cargo.toml
dinghy-build/src/: bindgen_macros.rs  build.rs  build_env.rs  lib.rs  utils.rs
dinghy-helper/: Cargo.toml
dinghy-helper/src/: build.rs  build_env.rs  lib.rs  toolchain.rs  utils.rs
dinghy-lib/: Cargo.toml  build.rs
dinghy-lib/src/: android.rs  cargo.rs  cargo_facade.rs  cli.rs  compiler.rs  config.rs  device.rs  errors.rs  lib.rs  overlay.rs  project.rs  regular_platform.rs  ssh.rs  toolchain.rs  utils.rs
dinghy-lib/src/android/: device.rs  mod.rs  platform.rs
dinghy-lib/src/apple/: device.rs  helpers.py  mod.rs  platform.rs  xcode.rs
dinghy-lib/src/device/: android.rs  host.rs  mod.rs  script.rs  ssh.rs
dinghy-lib/src/device/ios/: mobiledevice_sys.rs  mod.rs  xcode.rs
dinghy-lib/src/host/: device.rs  mod.rs  platform.rs
dinghy-lib/src/ios/: device.rs  helpers.py  mobiledevice_sys.rs  mod.rs  platform.rs  xcode.rs
dinghy-lib/src/ohos/: device.rs  mod.rs  platform.rs
dinghy-lib/src/platform/: host.rs  ios.rs  mod.rs  regular_platform.rs
dinghy-lib/src/plugin/: mod.rs
dinghy-lib/src/script/: device.rs  mod.rs
dinghy-lib/src/ssh/: device.rs  mod.rs
dinghy-test/: Cargo.toml
dinghy-test/src/: lib.rs
docs/: android.md  files.md  filter.md  helper.md  ios.md  ohos.md  overlay.md  ssh.md  vars.md
legacy/: Cargo.toml  README.md  build.rs
mobiledevice-sys/: Cargo.toml  build.rs
mobiledevice-sys/src/: lib.rs
src/: android.rs  build.rs  cargo_facade.rs  cli.rs  config.rs  errors.rs  lib.rs  linker.rs  main.rs  project.rs  regular_platform.rs  regular_toolchain.rs  shim.rs  ssh.rs  toolchain.rs  xcode.rs
src/host/: mod.rs
src/ios/: helpers.py  mobiledevice_sys.rs  mod.rs  xcode.rs
test-app/: .dinghy.toml
test-app/src/: lib.rs
test-nows/: .dinghy.toml  Cargo.toml
test-nows/src/: lib.rs
test-project-filter/: Cargo.toml
test-project-filter/not-on-ios/: Cargo.toml
test-project-filter/not-on-ios/src/: lib.rs
test-ws/: .dinghy.toml  Cargo.toml
test-ws/test-app/: .dinghy.toml  Cargo.toml
test-ws/test-app/.cargo/: config
test-ws/test-app/src/: lib.rs
test-ws/test-bin/: Cargo.toml
test-ws/test-bin/.cargo/: config.toml
test-ws/test-bin/src/: main.rs
test-ws/test-proc-macro/: Cargo.toml
