[package]
name = "dinghy"
version = "0.1.0"
authors = ["Mathieu Poumeyrol <mathieu.poumeyol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Painless tests on mobile devices"
keywords = [
    "tests", "mobile", "ios", "android"
]
build="build.rs"

[dependencies]
core-foundation = "*"
core-foundation-sys = "*"
error-chain = "*"
libc="*"
tempfile = "*"
tempdir = "0.3"
log="*"
env_logger="*"
clap = "*"
cargo = "*"
plist = "*"
regex = "*"
