[package]
name = "dinghy"
version = "0.1.14-pre"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Painless tests on mobile devices"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/snipsco/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
build="build.rs"
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]

[badges]
travis-ci = { repository = "snipsco/dinghy" }

[dependencies]
error-chain = "0.5"
libc="0.2"
tempfile = "2.1"
tempdir = "0.3"
log="0.3"
env_logger="0.3"
clap = "2.18"
cargo = "0.14"
plist = "0.0.14"
regex = "0.1"
json = "0.11"
ignore = "0.1"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.2"
core-foundation-sys = "0.2"
