[package]
name = "cargo-dinghy"
version = "0.4.18"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Cross-compilation made easier"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/snipsco/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]
readme = "../README.md"

[badges]
travis-ci = { repository = "snipsco/dinghy" }

[dependencies]
dinghy-lib = "0.4.18"
error-chain = "0.11"
log = "0.4"
pretty_env_logger = "0.3"
clap = "2.32"
cargo = "0.32"
itertools = "0.8"
