[package]
name = "cargo-dinghy"
version = "0.4.62-pre"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Cross-compilation made easier"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/snipsco/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]
readme = "../README.md"
edition = "2018"

[badges]
travis-ci = { repository = "snipsco/dinghy" }

[dependencies]
dinghy-lib = { path = "../dinghy-lib" }
error-chain = "0.12"
log = "0.4"
clap = "2.32"
env_logger = "0.9"
openssl-sys = { features = [ "vendored" ], version = "0.9" }
