[package]
name = "cargo-dinghy"
version = "0.6.6-pre"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@sonos>", "Thibaut Lorrain <thibaut.lorrain@sonos.com>"]
license = "MIT/Apache-2.0"
description = "Cross-compilation made easier"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/snipsco/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]
readme = "../README.md"
edition = "2021"

[badges]
travis-ci = { repository = "snipsco/dinghy" }

[dependencies]
dinghy-lib = { path = "../dinghy-lib" }
log = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
anyhow = "1.0.57"
cargo_metadata = "0.15.0"
