[package]
name = "dinghy-build"
version = "0.4.26"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Cross-compilation made easier - helpers for build.rs scripts"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/snipsco/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]

[dependencies]
error-chain = { version = "0.12.0", default-features = false }
cc = "1"
log="0.4"
