[package]
name = "dinghy-lib"
version = "0.4.46"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Cross-compilation made easier - see main crate cargo-dinghy"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/snipsco/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
build="build.rs"
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]
readme = "../README.md"
edition = "2018"

[dependencies]
anyhow = "1"
dinghy-build = "0.4.46"
dirs = "3"
failure = "0.1.6"
filetime = "0.2"
log = "0.4"
env_logger = "0.8"
clap = "2.33"
cargo = "0.50"
atty = "0.2"
itertools = "0.10"
plist = "1"
regex = "1.0"
json = "0.12"
ignore = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
shell-escape = "0.1"
walkdir = "2.0"
which = "4.0"
shellexpand="2"
url = "= 2.1.1" # The `url` version 2.1.1 introduced a regression in Cargo (https://github.com/servo/rust-url/issues/577). This line should be removed once `cargo` lib is updated to support ssh urls again. It should be included in `cargo` 0.43: https://github.com/rust-lang/cargo/pull/7787/commits/dde27346685e09166967616581aac383918b2c04#diff-1dc41e0ad8fa6e5cafa93ac2d22c67f3
semver = "0.11"

[dev-dependencies]
tempfile = "3.1"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.7"
core-foundation-sys = "0.7"
libc = "0.2.66"
tempdir = "0.3"
