[package]
name = "dinghy-lib"
version = "0.4.70-pre"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Cross-compilation made easier - see main crate cargo-dinghy"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/snipsco/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
build="build.rs"
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]
readme = "../README.md"
edition = "2018"

[dependencies]
anyhow = "1"
dinghy-build = { path = "../dinghy-build" }
dirs = "4"
failure = "0.1.6"
filetime = "0.2"
log = "0.4"
env_logger = "0.9"
clap = "2.33"
cargo = "0.60"
atty = "0.2"
itertools = "0.10"
plist = "1"
regex = "1.0"
json = "0.12"
ignore = "0.4"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
shell-escape = "0.1"
walkdir = "2.0"
which = "4.0"
shellexpand="2"
semver = "1"

[dev-dependencies]
tempfile = "3.1"

[target.'cfg(target_os="macos")'.dependencies]
core-foundation = "0.9"
core-foundation-sys = "0.8"
libc = "0.2.66"
tempdir = "0.3"
