[package]
name = "dinghy-lib"
version = "0.7.2"
authors = ["Mathieu Poumeyrol <mathieu.poumeyrol@snips.ai>"]
license = "MIT/Apache-2.0"
description = "Cross-compilation made easier - see main crate cargo-dinghy"
homepage = "https://medium.com/snips-ai/dinghy-painless-rust-tests-and-benches-on-ios-and-android-c9f94f81d305#.c2sx7two8"
repository = "https://github.com/sonos/dinghy"
keywords = [
    "tests", "mobile", "ios", "android", "cargo"
]
build="build.rs"
categories = [ "development-tools::cargo-plugins", "development-tools::testing" , "development-tools::profiling" ]
readme = "../README.md"
edition = "2018"

[dependencies]
anyhow = "1"
dinghy-build = "0.7.2"
dirs = "5"
filetime = "0.2"
log = "0.4"
itertools = "0.10"
plist = "1"
regex = "1.0"
json = "0.12"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
shell-escape = "0.1"
walkdir = "2.0"
which = "4.0"
shellexpand="3"
semver = "1"
cargo_metadata = "0.15.0"
colored = "2.0.0"
lazy_static = "1.4.0"
dyn-clone = "1.0.8"
fs-err = "2.11.0"
tempfile = "3.1"

[dev-dependencies]
tempfile = "3.1"
